# CMU-VLN-Challenge-2026

./: .gitignore  .gitmodules  CLAUDE.md  README.md  readme_kante.md  readme_kante2.md
ai_module/src/sysnav_challenge/: README.md  package.xml  setup.cfg  setup.py
ai_module/src/sysnav_challenge/config/: challenge_objects.yaml  challenge_topics.yaml
ai_module/src/sysnav_challenge/launch/: sysnav_challenge.launch.py
ai_module/src/sysnav_challenge/patches/: sysnav_challenge.patch
ai_module/src/sysnav_challenge/rviz/: single_room_map.rviz
ai_module/src/sysnav_challenge/scripts/: apply_sysnav_patch.sh  build_in_container.sh  prepare_models_in_container.sh
ai_module/src/sysnav_challenge/sysnav_challenge/: __init__.py  challenge_adapter.py
ai_module/src/tmah_vlm/: package.xml  setup.cfg  setup.py
ai_module/src/tmah_vlm/launch/: tmah_vlm.launch
ai_module/src/tmah_vlm/tmah_vlm/: config.py  main_node.py  nav_publish.py  readme_occlusion_fix.md  readme_pipeline_structure.md  test_lidar_mapping.py  test_lidar_product_mapping.py  test_pano_lidar_overlay.py  vlm_node.py
ai_module/src/tmah_vlm/tmah_vlm/bbox3d/: estimator.py  wireframe.py
ai_module/src/tmah_vlm/tmah_vlm/callback/: sensor_callbacks.py
ai_module/src/tmah_vlm/tmah_vlm/common/: callback.py  helpers.py  initialize.py
ai_module/src/tmah_vlm/tmah_vlm/context/: helpers.py
ai_module/src/tmah_vlm/tmah_vlm/evaluation/: __init__.py  local_eval_node.py
ai_module/src/tmah_vlm/tmah_vlm/geometry/: bbox_estimator.py  projector.py
ai_module/src/tmah_vlm/tmah_vlm_backup/: vlm_node.py
(+195 files in other folders)
