<?xml version="1.0"?>
<package format="3">
  <name>sysnav_challenge</name>
  <version>0.1.0</version>
  <description>CMU VLN Challenge adapter and launch files for SysNav.</description>
  <maintainer email="tmah@example.com">TMAH</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tare_planner</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
