<?xml version="1.0"?>
<package format="3">
  <name>tmah_vlm</name>
  <version>0.0.1</version>
  <description>TMAH team VLM module for CMU VLN Challenge 2026</description>
  <maintainer email="you@example.com">TMAH</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
